Added html and css code.

--- a/index.html
+++ b/index.html
@@ -6,27 +6,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Photographer Landing Page</title>
+  <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Lato|Roboto&amp;subset=latin-ext" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#">Strona główna</a></li>
-        <li><a href="#">O mnie</a></li>
-        <li><a href="#">Galeria</a></li>
-        <li><a href="#">Kontakt</a></li>
-      </ul>
-    </nav>
-    <section>
-
-    </section>
-  </header>
-  <aside>
-    <nav>
-
-    </nav>
-  </aside>
+  <div class="wrapper">
+    <header>
+      <nav class="main">
+        <ul>
+          <li><a href="#">Strona główna</a></li>
+          <li><a href="#">O mnie</a></li>
+          <li><a href="#">Galeria</a></li>
+          <li><a href="#">Kontakt</a></li>
+        </ul>
+      </nav>
+      <section class="logo">
+        <div class="logo-top">
+          <h1><a href="#">Bartosz Chrysteczko</a></h1>
+        </div>
+        <div class="logo-bottom">
+          <p><a href="#">Fotografia</a></p>
+        </div>
+      </section>
+    </header>
+    <aside>
+      <nav>
+        <ul>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+          <li><a href="#"></a></li>
+        </ul>
+      </nav>
+    </aside>
+  </div>
 </body>
 
 </html>
