--- a/index.html
+++ b/index.html
@@ -21,25 +21,23 @@
           <li><a href="#">Kontakt</a></li>
         </ul>
       </nav>
-      <section class="logo">
-        <div class="logo-top">
-          <h1><a href="#">Bartosz Chrysteczko</a></h1>
-        </div>
-        <div class="logo-bottom">
-          <p><a href="#">Fotografia</a></p>
+      <section>
+        <div class="logo">
+          <h1><a href="#">Bartosz Chrysteczko<span>Fotografia</span></a></h1>
+          <div class="animate-border"></div>
         </div>
       </section>
+      <aside>
+        <nav>
+          <ul>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+          </ul>
+        </nav>
+      </aside>
     </header>
-    <aside>
-      <nav>
-        <ul>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-          <li><a href="#"></a></li>
-        </ul>
-      </nav>
-    </aside>
   </div>
 </body>
 
