First page done

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <nav class="main">
         <ul>
-          <li><a href="#">Strona główna</a></li>
+          <li><a href="#" class="main-active">Strona główna</a></li>
           <li><a href="#">O mnie</a></li>
           <li><a href="#">Galeria</a></li>
           <li><a href="#">Kontakt</a></li>
@@ -24,13 +24,12 @@
       <section>
         <div class="logo">
           <h1><a href="#">Bartosz Chrysteczko<span>Fotografia</span></a></h1>
-          <div class="animate-border"></div>
         </div>
       </section>
       <aside>
         <nav>
           <ul>
-            <li><a href="#"></a></li>
+            <li><a href="#" class="active"></a></li>
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
